--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pengelola Data Mahasiswa</title>
+    <title>CSVampus — Pengelola Data Mahasiswa</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- SheetJS (xlsx) for Excel export -->
@@ -54,8 +54,8 @@
         <!-- Header -->
         <div class="flex flex-wrap items-center justify-between gap-4 mb-6">
             <div>
-                <h1 class="text-3xl font-bold text-gray-800">Pengelola Data Mahasiswa</h1>
-                <p class="text-gray-500 mt-1">Unggah, kelola, dan lihat data mahasiswa dengan mudah.</p>
+                <h1 class="text-3xl font-bold text-gray-800">CSVampus</h1>
+                <p class="text-gray-500 mt-1">Unggah CSV, rapikan data mahasiswa, dan kelola rombel dengan mudah.</p>
             </div>
             <div class="flex items-center gap-2">
                 <span id="connectionStatus" class="text-xs font-medium px-2.5 py-1 rounded-full bg-gray-100 text-gray-800">Connecting...</span>
